--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.0",
+     "react-date-picker": "^11.0.0",
     "react-scripts": "^5.0.1",
     "recharts": "^2.15.0",
     "rimraf": "^6.0.1",
