--- a/frontend/package.json
+++ b/frontend/package.json
@@ -19,6 +19,7 @@
     "glob": "^11.0.1",
     "react": "^18.0.0",
     "react-barcode": "^1.5.3",
+    "react-bootstrap": "^2.10.9",
     "react-chartjs-2": "^5.3.0",
     "react-dom": "^18.0.0",
     "react-router-dom": "^6.4.0",
